# sst_as_a_heuristic_for_frontier_exploration

./: CITATION.cff  LICENSE  README.md  Spot_SSL_Main.rviz
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/audio_utils/: AudioFrame.h
devel/include/microstrain_mips/: SetAccelAdaptiveVals.h  SetAccelAdaptiveValsRequest.h  SetAccelAdaptiveValsResponse.h  SetAccelBias.h  SetAccelBiasModel.h  SetAccelBiasModelRequest.h  SetAccelBiasModelResponse.h  SetAccelBiasRequest.h  SetAccelBiasResponse.h  SetAccelNoise.h  SetAccelNoiseRequest.h  SetAccelNoiseResponse.h  SetComplementaryFilter.h  SetComplementaryFilterRequest.h  SetComplementaryFilterResponse.h  SetConingScullingComp.h  SetConingScullingCompRequest.h  SetConingScullingCompResponse.h  SetDynamicsMode.h  SetDynamicsModeRequest.h  SetDynamicsModeResponse.h  SetEstimationControlFlags.h  SetEstimationControlFlagsRequest.h  SetEstimationControlFlagsResponse.h  SetFilterEuler.h  SetFilterEulerRequest.h  SetFilterEulerResponse.h  SetFilterHeading.h  SetFilterHeadingRequest.h  SetFilterHeadingResponse.h  SetGyroBias.h  SetGyroBiasModel.h  SetGyroBiasModelRequest.h  SetGyroBiasModelResponse.h  SetGyroBiasRequest.h  SetGyroBiasResponse.h  SetGyroNoise.h  SetGyroNoiseRequest.h  SetGyroNoiseResponse.h  SetHardIronValues.h  (+30 more)
devel/include/nmea_msgs/: Gpgga.h  Gpgsa.h  Gpgst.h  Gpgsv.h  GpgsvSatellite.h  Gprmc.h  Sentence.h
devel/include/octomap_msgs/: BoundingBoxQueryRequest.h  BoundingBoxQueryResponse.h  GetOctomapRequest.h  GetOctomapResponse.h  Octomap.h  OctomapWithPose.h
devel/include/octomap_server/: OctomapServerConfig.h
devel/include/odas_ros/: OdasSsl.h  OdasSslArrayStamped.h  OdasSst.h  OdasSstArrayStamped.h
devel/include/spot_msgs/: AprilTagState.h  BatteryState.h  BatteryStateArray.h  BehaviorFault.h  BehaviorFaultState.h  ClearBehaviorFault.h  ClearBehaviorFaultRequest.h  ClearBehaviorFaultResponse.h  EStopState.h  EStopStateArray.h  Feedback.h  FootState.h  FootStateArray.h  Lease.h  LeaseArray.h  LeaseOwner.h  LeaseResource.h  ListGraph.h  ListGraphRequest.h  ListGraphResponse.h  MaplessTrajectoryAction.h  MaplessTrajectoryActionFeedback.h  MaplessTrajectoryActionGoal.h  MaplessTrajectoryActionResult.h  MaplessTrajectoryFeedback.h  MaplessTrajectoryGoal.h  MaplessTrajectoryResult.h  Metrics.h  MobilityParams.h  NavigateToAction.h  NavigateToActionFeedback.h  NavigateToActionGoal.h  NavigateToActionResult.h  NavigateToFeedback.h  NavigateToGoal.h  NavigateToResult.h  PowerState.h  (+23 more)
hardware/: Mast_Brace_290mm.stl  Mic_Mast_290mm.stl  PSU_Mast_Side_Plates.stl  Printable_Ribs_v5.stl  Printable_SPOT_Plate.stl  ReSpeak_Mast_Cap.stl  RespeakerNakedPlateIsolated.stl  SPOT_Role_Bar_+_GPS.stl  Sound_Isolation_Plate.stl  ethernet_cable_tie_down_v1.stl
src/points_preprocessor/: CMakeLists.txt
src/points_preprocessor/launch/: points_concat_filter.launch
src/points_preprocessor/nodes/points_concat_filter/: points_concat_filter.cpp
src/spot_ssl_launch_control/: CMakeLists.txt  package.xml
src/spot_trajectory_planner/: CMakeLists.txt  package.xml
src/ssl_frontier_selection/: CMakeLists.txt  package.xml
src/ssl_frontier_selection/launch/: depth_filter.launch  fbet.launch  frontier_filter.launch  frontier_selector.launch  gpe_filter.launch  husky_playpen.launch  octomap_server.launch  sss_classification.launch
src/ssl_frontier_selection/src/: crystal_grading.py  depth_limiter.cpp  gpe_filter.py  grid_frontier_filter.py  occupancy_map_node.py  sss_classification.py
src/ssl_frontier_selection/srv/: CheckCollision.srv  GetGraded.srv  PruneFrontiers.srv  RemoveFrontier.srv  StampMap.srv
(+652 files in other folders)
